--- a/stm32f3_code/mECU.project
+++ b/stm32f3_code/mECU.project
@@ -19,17 +19,71 @@
   <VirtualDirectory Name="src">
     <File Name="../main.c"/>
     <File Name="../Makefile"/>
-    <File Name="idling_state.c"/>
     <File Name="src/system_stm32f30x.c"/>
     <File Name="src/megasquirt_protocol.c"/>
+    <File Name="src/uart.c"/>
+    <File Name="src/temperature.c"/>
   </VirtualDirectory>
   <VirtualDirectory Name="inc">
     <File Name="state_machine.h"/>
-    <File Name="inc/idling_state.h"/>
     <File Name="inc/stm32f30x.h"/>
     <File Name="inc/pins.h"/>
     <File Name="inc/megasquirt_protocol.h"/>
     <File Name="inc/engine_params.h"/>
+    <File Name="inc/uart.h"/>
+    <File Name="inc/temperature.h"/>
+  </VirtualDirectory>
+  <VirtualDirectory Name="st_lib_inc">
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_adc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_can.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_comp.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_crc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_dac.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_dbgmcu.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_dma.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_exti.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_flash.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_fmc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_gpio.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_hrtim.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_i2c.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_iwdg.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_misc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_opamp.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_pwr.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_rcc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_rtc.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_spi.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_syscfg.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_tim.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_usart.h"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/inc/stm32f30x_wwdg.h"/>
+  </VirtualDirectory>
+  <VirtualDirectory Name="st_lib_src">
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_adc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_can.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_comp.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_crc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dac.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dbgmcu.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dma.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_exti.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_flash.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_fmc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_gpio.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_hrtim.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_i2c.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_iwdg.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_misc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_opamp.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_pwr.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_rcc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_rtc.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_spi.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_syscfg.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_tim.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_usart.c"/>
+    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_wwdg.c"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
@@ -88,7 +142,7 @@ monitor reset halt</PostConnectCommands>
         <ClangCmpFlags/>
         <ClangPP/>
         <SearchPaths>./inc
-../../stm32f3-discovery-basic-template/Libraries/STM32F30x_StdPeriph_Driver/inc</SearchPaths>
+./Libraries/STM32F30x_StdPeriph_Driver/inc</SearchPaths>
       </Completion>
     </Configuration>
     <Configuration Name="Release" CompilerType="gnu gcc" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
@@ -130,54 +184,4 @@ monitor reset halt</PostConnectCommands>
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="st_lib_inc">
-    <File Name="inc/stm32f3/stm32f30x_adc.h"/>
-    <File Name="inc/stm32f3/stm32f30x_can.h"/>
-    <File Name="inc/stm32f3/stm32f30x_comp.h"/>
-    <File Name="inc/stm32f3/stm32f30x_crc.h"/>
-    <File Name="inc/stm32f3/stm32f30x_dac.h"/>
-    <File Name="inc/stm32f3/stm32f30x_dbgmcu.h"/>
-    <File Name="inc/stm32f3/stm32f30x_dma.h"/>
-    <File Name="inc/stm32f3/stm32f30x_exti.h"/>
-    <File Name="inc/stm32f3/stm32f30x_flash.h"/>
-    <File Name="inc/stm32f3/stm32f30x_gpio.h"/>
-    <File Name="inc/stm32f3/stm32f30x_i2c.h"/>
-    <File Name="inc/stm32f3/stm32f30x_iwdg.h"/>
-    <File Name="inc/stm32f3/stm32f30x_misc.h"/>
-    <File Name="inc/stm32f3/stm32f30x_opamp.h"/>
-    <File Name="inc/stm32f3/stm32f30x_pwr.h"/>
-    <File Name="inc/stm32f3/stm32f30x_rcc.h"/>
-    <File Name="inc/stm32f3/stm32f30x_rtc.h"/>
-    <File Name="inc/stm32f3/stm32f30x_spi.h"/>
-    <File Name="inc/stm32f3/stm32f30x_syscfg.h"/>
-    <File Name="inc/stm32f3/stm32f30x_tim.h"/>
-    <File Name="inc/stm32f3/stm32f30x_usart.h"/>
-    <File Name="inc/stm32f3/stm32f30x_wwdg.h"/>
-  </VirtualDirectory>
-  <VirtualDirectory Name="st_lib_src">
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_adc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_can.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_comp.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_crc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dac.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dbgmcu.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_dma.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_exti.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_flash.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_fmc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_gpio.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_hrtim.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_i2c.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_iwdg.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_misc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_opamp.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_pwr.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_rcc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_rtc.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_spi.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_syscfg.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_tim.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_usart.c"/>
-    <File Name="Libraries/STM32F30x_StdPeriph_Driver/src/stm32f30x_wwdg.c"/>
-  </VirtualDirectory>
 </CodeLite_Project>
